--- a/package.json
+++ b/package.json
@@ -84,8 +84,9 @@
     "@types/react": "^17.0.69",
     "@types/react-dom": "^17.0.22",
     "@types/svgo": "^2.6.4",
-    "@typescript-eslint/eslint-plugin": "^5.59.8",
-    "@typescript-eslint/parser": "^5.59.8",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "@typescript-eslint/utils": "^6.21.0",
     "babel-loader": "^9.1.2",
     "eslint": "^8.44.0",
     "eslint-plugin-import": "^2.27.5",
