--- a/packages/eslint-plugin/package.json
+++ b/packages/eslint-plugin/package.json
@@ -34,6 +34,9 @@
     "outdent": "^0.8.0",
     "typescript": "~4.9.5"
   },
+  "engines": {
+    "node": "^16.0.0 || >=18.0.0"
+  },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   }
