build: update packages to use more modern moduleresolution options
This change updates tsconfigs across all packages to use more up to date `module` and `moduleResolution` options.  For all packages that were being built as `commonjs` modules with node `moduleResolution`, they've been updated to use `nodenext`.

I also took the opportunity to re-organize the tsconfigs at the packages level to make their names more accurate.  Previously the main `packages/tsconfig.json`, which is what the `build:esm` command targetted, referenced all package's tsconfigs, while a `packages/tsconfig.cjs.json` only referenced the cjs tsconfig from the react package.  However, all packages' tsconfigs _except_ for the react tsconfig are building cjs.  So having a command that's called `build:esm` run all cjs builds and one esm build didn't really do what the name would suggest.  So I reversed that construct.  Now `packages/tsconfig.json` still references all of the packages tsconfig, except for the react package, it references the `tsconfig.cjs`, and I renamed the `packages/tsconfig.cjs.json` to `packages/tsconfig.esm.json` and have it only referencing the main react package tsconfig.

The net / net is that `build:esm` is only building esm output and `build:cjs` is only building cjs output.

Similarly, all package level tsconfigs are inheriting from packages/tsconfig.options.json, but that config had module and moduleResolution corresponding to the tsconfig in react (the ESM one), and all of the other package tsconfigs were overriding the module and moduleResolution.  So I swapped that, so that the base config has the module and moduleResolution that all but on of the packages are using, and had the react tsconfig override that to what it needed to be for esm output. This means fewer tsconfigs are needing to override those options.

Lastly, I've done build comparisons for all packages and target, and they all result in the same build output as they did before these changes.

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "postbuild": "scripts/postbuild.sh",
     "build:babel-fixture": "yarn workspace @compiled/babel-component-fixture build && yarn workspace @compiled/babel-component-extracted-fixture build",
     "build:browser": "ttsc --build packages/tsconfig.browser.json",
-    "build:cjs": "ttsc --build packages/tsconfig.cjs.json",
-    "build:esm": "ttsc --build packages/tsconfig.json",
+    "build:cjs": "ttsc --build packages/tsconfig.json",
+    "build:esm": "ttsc --build packages/tsconfig.esm.json",
     "build:inspect": "node --inspect-brk node_modules/typescript/lib/tsc.js --build packages",
     "build:parcel": "ttsc --build examples/parcel/tsconfig.json && yarn workspace @compiled/parcel-app build",
     "build:ssr": "CI=false && ttsc --build examples/ssr/tsconfig.json && yarn workspace @compiled/ssr-app build",
