--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -2,6 +2,8 @@
   "extends": "./tsconfig.options.json",
   "compilerOptions": {
     "outDir": "dist/esm",
+    "module": "es6",
+    "moduleResolution": "node",
     "tsBuildInfoFile": "tsconfig.esm.tsbuildinfo"
   },
   "references": [{ "path": "../benchmark" }, { "path": "../jest" }, { "path": "../utils" }]
