--- a/packages/react/tsconfig.browser.json
+++ b/packages/react/tsconfig.browser.json
@@ -2,6 +2,8 @@
   "extends": "./tsconfig.options.json",
   "compilerOptions": {
     "outDir": "dist/browser",
+    "module": "es6",
+    "moduleResolution": "node",
     "plugins": [
       {
         "transform": "ts-transform-define",
