--- a/packages/tsconfig.options.json
+++ b/packages/tsconfig.options.json
@@ -7,8 +7,8 @@
     "forceConsistentCasingInFileNames": true,
     "jsx": "react",
     "lib": ["dom", "es2016", "es2017.object"],
-    "module": "es6",
-    "moduleResolution": "node",
+    "module": "nodenext",
+    "moduleResolution": "nodenext",
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noUnusedLocals": true,
