--- a/packages/eslint-plugin/package.json
+++ b/packages/eslint-plugin/package.json
@@ -28,10 +28,14 @@
     "@types/estraverse": "^5.1.7",
     "@types/estree": "^1.0.3",
     "@types/estree-jsx": "^1.0.2",
-    "@typescript-eslint/parser": "^5.59.8",
+    "@typescript-eslint/parser": "^6.21.0",
+    "@typescript-eslint/utils": "^6.21.0",
     "eslint": "^8.41.0",
     "outdent": "^0.8.0",
-    "typescript": "^4.9.5"
+    "typescript": "~4.9.5"
+  },
+  "engines": {
+    "node": "^16.0.0 || >=18.0.0"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
