--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@typescript-eslint/parser": "^6.21.0",
     "@typescript-eslint/utils": "^6.21.0",
     "babel-loader": "^9.1.2",
+    "csstype": "^3.1.3",
     "eslint": "^8.57.1",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-json-files": "^2.2.0",
