--- a/.github/workflows/visual-regression-test.yml
+++ b/.github/workflows/visual-regression-test.yml
@@ -48,7 +48,8 @@ jobs:
 
       - name: Archive screenshots
         if: ${{ failure() }}
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: visual-regression-screenshots
           path: .loki
+          include-hidden-files: true
