reproduce babel issue

--- a/packages/babel-plugin/package.json
+++ b/packages/babel-plugin/package.json
@@ -25,6 +25,7 @@
     "@babel/parser": "^7.26.3",
     "@babel/plugin-syntax-jsx": "^7.25.9",
     "@babel/plugin-transform-flow-strip-types": "^7.25.9",
+    "@babel/preset-env": "^7.26.7",
     "@babel/template": "^7.25.9",
     "@babel/traverse": "^7.26.4",
     "@babel/types": "^7.26.3",
