--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,3 @@
-* @JakeLane @pancaspe87 @liamqma @dddlr @zesmith2
+* @JakeLane @pancaspe87 @liamqma @dddlr @kylorhall-atlassian @danieldelcore
 **/package.json
 yarn.lock
