chore: update .tool-versions to include rust 1.88.0

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "debug.javascript.defaultRuntimeExecutable": {
+    "pwa-node": "/Users/hsinha/.local/share/mise/shims/node"
+  }
 }
