--- a/packages/swc-plugin/package.json
+++ b/packages/swc-plugin/package.json
@@ -8,7 +8,15 @@
   "main": "target/wasm32-wasip1/release/swc_plugin_compiled.wasm",
   "files": [],
   "scripts": {
-    "prepublishOnly": "cargo build-wasip1 --release"
+    "build": "cargo build-wasip1 --release",
+    "prepublishOnly": "cargo build-wasip1 --release",
+    "test": "jest",
+    "example": "node example.js"
+  },
+  "devDependencies": {
+    "@swc/core": "^1.3.0",
+    "@types/jest": "^27.5.2",
+    "jest": "^29.4.3"
   },
   "preferUnplugged": true
 }
