--- a/packages/swc-plugin/package.json
+++ b/packages/swc-plugin/package.json
@@ -13,8 +13,10 @@
     "prepublishOnly": "cargo build-wasip1 --release",
     "test": "jest"
   },
+  "dependencies": {
+    "@swc/core": "^1.3.0"
+  },
   "devDependencies": {
-    "@swc/core": "^1.3.0",
     "@types/jest": "^27.5.2",
     "jest": "^29.4.3"
   },
