--- a/packages/swc-plugin/Cargo.toml
+++ b/packages/swc-plugin/Cargo.toml
@@ -12,8 +12,16 @@ crate-type = ["cdylib"]
 lto = true
 
 [dependencies]
-serde = "1"
-swc_core = { version = "34.0.*", features = ["ecma_plugin_transform"] }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+swc_core = { version = "34.0.*", features = ["ecma_plugin_transform", "ecma_ast", "common", "ecma_utils", "ecma_visit"] }
+once_cell = "1"
+regex = "1"
+sourcemap = "7"
+base64 = "0.21"
+radix_fmt = "1"
+fxhash = "0.2"
+byteorder = "1"
 
 # .cargo/config.toml defines few alias to build plugin.
 # cargo build-wasip1 generates wasm32-wasip1 binary
