--- a/packages/swc-plugin/tsconfig.json
+++ b/packages/swc-plugin/tsconfig.json
@@ -2,19 +2,8 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./src",
-    "declaration": true,
-    "declarationMap": true,
-    "sourceMap": true,
-    "target": "ES2020",
-    "module": "CommonJS",
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "rootDir": "./src"
   },
   "include": ["src/**/*"],
-  "exclude": ["dist", "target", "tests", "src/__fixtures__"]
+  "exclude": ["dist", "node_modules", "**/*.test.ts", "**/__tests__/**/*"]
 }
