--- a/packages/swc-plugin2/Cargo.toml
+++ b/packages/swc-plugin2/Cargo.toml
@@ -24,6 +24,7 @@ swc_core = { version = "0.90", features = [
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 regex = "1.10"
+blake3 = "1.5"
 
 [dev-dependencies]
 swc_core = { version = "0.90", features = [
