--- a/packages/swc-plugin2/Cargo.toml
+++ b/packages/swc-plugin2/Cargo.toml
@@ -25,6 +25,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 regex = "1.10"
 blake3 = "1.5"
+base64 = "0.22"
 
 [dev-dependencies]
 swc_core = { version = "0.90", features = [
