--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build:parcel": "ttsc --build examples/parcel/tsconfig.json && yarn workspace @compiled/parcel-app build",
     "build:ssr": "CI=false && ttsc --build examples/ssr/tsconfig.json && yarn workspace @compiled/ssr-app build",
     "build:storybook": "build-storybook",
-    "build:swc2": "yarn workspace @compiled/swc-plugin run build",
+    "build:swc": "yarn workspace @compiled/swc-plugin run build",
     "build:webpack": "yarn build:babel-fixture && ttsc --build examples/webpack/tsconfig.json && yarn workspace @compiled/webpack-app build",
     "build:webpack:extract": "EXTRACT_TO_CSS=true yarn build:webpack",
     "bundlesize": "yarn build && size-limit",
@@ -33,10 +33,8 @@
     "postinstall": "scripts/postinstall.sh",
     "lint": "eslint --config .eslintrc.js --ext js,json,jsx,ts,tsx .",
     "lint:fix": "yarn lint -- --fix",
-    "pack:swc2": "cd packages/swc-plugin && npm pack --silent && mv -f compiled-swc-plugin-0.0.1.tgz compiled-swc-plugin-v0.0.1.tgz || true",
     "prettier:check": "prettier ./ --check",
     "prettier:fix": "prettier ./ --write",
-    "refresh:swc2": "yarn build:swc2 && yarn pack:swc2 && yarn install --force",
     "release": "yarn clean && yarn build && yarn changeset publish",
     "start": "npx nodemon --exec \"start-storybook -p 6006 --ci\" --watch packages/babel-plugin/ -e tsx",
     "start:inspect": "npx nodemon --exec \"node --inspect-brk node_modules/.bin/start-storybook -p 6006 --ci\" --watch packages/babel-plugin/ -e tsx",
@@ -74,6 +72,7 @@
     "@compiled/swc-plugin": "file:packages/swc-plugin"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.0",
@@ -105,6 +104,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "husky": "^4.3.8",
     "jest": "^29.4.3",
+    "babel-jest": "^29.7.0",
     "jest-environment-jsdom": "^29.4.3",
     "jest-extended": "^0.11.5",
     "jest-watch-typeahead": "^0.6.5",
