--- a/packages/swc-plugin/package.json
+++ b/packages/swc-plugin/package.json
@@ -43,10 +43,16 @@
     "test": "jest --no-cache --config ./jest.config.js",
     "test:ts": "tsc --noEmit"
   },
+  "dependencies": {
+    "@babel/core": "^7.26.10"
+  },
   "devDependencies": {
+    "@babel/generator": "^7.28.3",
+    "@babel/parser": "^7.28.4",
     "@swc/core": "1.3.107",
     "@types/node": "^20.0.0",
     "jest-extended": "^4.0.2",
+    "postcss": "^8.4.35",
     "typescript": "^5.0.0"
   },
   "peerDependencies": {
