--- a/packages/swc-plugin/tsconfig.json
+++ b/packages/swc-plugin/tsconfig.json
@@ -8,5 +8,5 @@
     "esModuleInterop": true,
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts", "tests/**/*.ts"]
 }
