--- a/packages/swc-plugin/tsconfig.json
+++ b/packages/swc-plugin/tsconfig.json
@@ -4,9 +4,10 @@
     "module": "CommonJS",
     "declaration": true,
     "outDir": "dist",
+    "rootDir": "src",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts", "tests/**/*.ts"]
+  "include": ["src/**/*.ts"]
 }
