--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   },
   "resolutions": {
     "@types/eslint-scope": "*",
+    "@types/babel__traverse": "7.13.0",
     "css-what": ">=6.1.0",
     "nth-check": ">=2.1.1",
     "semver": "^7.6.3",
