Get rdy for production

--- a/fixtures/parcel-transformer-swc-test-extract-app/.compiledcssrc
+++ b/fixtures/parcel-transformer-swc-test-extract-app/.compiledcssrc
@@ -2,5 +2,6 @@
   "importReact": false,
   "extract": true,
   "optimizeCss": false,
-  "inlineCss": true
+  "inlineCss": true,
+  "swc": "auto",
 }
