--- a/package.json
+++ b/package.json
@@ -63,18 +63,15 @@
     }
   },
   "resolutions": {
-    "@types/babel__traverse": "7.13.0",
     "@types/eslint-scope": "*",
     "css-what": ">=6.1.0",
     "nth-check": ">=2.1.1",
     "semver": "^7.6.3",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "babel-jest": "^29.4.3"
   },
-  "dependencies": {
-    "@compiled/swc-plugin": "file:packages/swc-plugin"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.0",
@@ -97,7 +94,7 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@typescript-eslint/utils": "^6.21.0",
-    "babel-jest": "^29.7.0",
+    "babel-jest": "^29.4.3",
     "babel-loader": "^9.1.2",
     "csstype": "^3.1.3",
     "eslint": "^8.57.1",
