--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "css-what": ">=6.1.0",
     "nth-check": ">=2.1.1",
     "semver": "^7.6.3",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "postcss": "8.4.31"
   },
   "dependencies": {},
   "devDependencies": {
