--- a/package.json
+++ b/package.json
@@ -67,9 +67,9 @@
     "babel-jest": "^29.4.3",
     "css-what": ">=6.1.0",
     "nth-check": ">=2.1.1",
+    "postcss": "8.4.31",
     "semver": "^7.6.3",
-    "typescript": "^4.9.5",
-    "postcss": "8.4.31"
+    "typescript": "^4.9.5"
   },
   "dependencies": {},
   "devDependencies": {
