--- a/package.json
+++ b/package.json
@@ -47,10 +47,10 @@
     "test": "jest --no-cache --config jest.config.js",
     "test:cover": "yarn test --collectCoverage",
     "test:imports": "node test/test-imports",
-    "test:parcel": "jest --testMatch '**/src/**/*.parceltest.{ts,tsx}' --testEnvironment=node",
+    "test:parcel": "jest --config jest.config.json --testMatch '**/src/**/*.parceltest.{ts,tsx}' --testPathIgnorePatterns 'packages/parcel-transformer-swc/' --testEnvironment=node",
     "pretest:parcel:swc": "yarn workspace @compiled/swc-plugin build && yarn workspace @compiled/parcel-transformer-swc build",
-    "test:parcel:swc": "jest --no-cache --testMatch '**/packages/parcel-transformer-swc/src/**/transformer.parceltest.ts' --runInBand --verbose",
-    "test:parcel:swc:watch": "jest --no-cache --watch --testMatch '**/packages/parcel-transformer-swc/src/**/transformer.parceltest.ts' --runInBand --verbose",
+    "test:parcel:swc": "jest --config jest.config.json --no-cache --testMatch '**/packages/parcel-transformer-swc/src/**/transformer.parceltest.ts' --runInBand --verbose",
+    "test:parcel:swc:watch": "jest --config jest.config.json --no-cache --watch --testMatch '**/packages/parcel-transformer-swc/src/**/transformer.parceltest.ts' --runInBand --verbose",
     "test:vr": "yarn loki --host host.docker.internal",
     "test:watch": "jest --no-cache --watch",
     "watch:parcel-transformer-swc": "tsc -w -p packages/parcel-transformer-swc/tsconfig.json",
