--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "build:parcel": "ttsc --build examples/parcel/tsconfig.json && yarn workspace @compiled/parcel-app build",
     "build:ssr": "CI=false && ttsc --build examples/ssr/tsconfig.json && yarn workspace @compiled/ssr-app build",
     "build:storybook": "build-storybook",
+    "build:vite": "ttsc --build examples/vite/tsconfig.json && yarn workspace @compiled/vite-app build",
     "build:webpack": "yarn build:babel-fixture && ttsc --build examples/webpack/tsconfig.json && yarn workspace @compiled/webpack-app build",
     "build:webpack:extract": "EXTRACT_TO_CSS=true yarn build:webpack",
     "bundlesize": "yarn build && size-limit",
@@ -40,6 +41,7 @@
     "start:parcel": "ttsc --build examples/parcel/tsconfig.json && yarn workspace @compiled/parcel-app start",
     "start:prod": "NODE_ENV=production yarn start",
     "start:ssr": "ttsc --build examples/ssr/tsconfig.json && yarn workspace @compiled/ssr-app start",
+    "start:vite": "ttsc --build examples/vite/tsconfig.json && yarn workspace @compiled/vite-app dev",
     "start:webpack": "yarn build:babel-fixture && ttsc --build examples/webpack/tsconfig.json && yarn workspace @compiled/webpack-app start",
     "start:webpack:extract": "EXTRACT_TO_CSS=true yarn start:webpack",
     "test": "jest --no-cache",
