--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -13,6 +13,7 @@
     { "path": "parcel-transformer-external/tsconfig.json" },
     { "path": "react/tsconfig.cjs.json" },
     { "path": "utils/tsconfig.json" },
+    { "path": "vite-plugin/tsconfig.json" },
     { "path": "webpack-loader/tsconfig.json" }
   ]
 }
