--- a/examples/parcel/package.json
+++ b/examples/parcel/package.json
@@ -10,8 +10,8 @@
   "dependencies": {
     "@compiled/babel-component-extracted-fixture": "*",
     "@compiled/react": "*",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.25.9",
