--- a/examples/ssr/package.json
+++ b/examples/ssr/package.json
@@ -15,8 +15,8 @@
     "@babel/helper-builder-react-jsx-experimental": "^7.12.11",
     "@compiled/react": "*",
     "express": "4.21.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "babel-preset-razzle": "^4.2.18",
