--- a/website/packages/ui/package.json
+++ b/website/packages/ui/package.json
@@ -21,7 +21,7 @@
     "react-dom": "^18.3.1"
   },
   "peerDependencies": {
-    "react": "^16.13.1 || ^17.0.0 || ^18.0.0",
-    "react-dom": "^16.13.1 || ^17.0.0 || ^18.0.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   }
 }
