Add ESM support for importing the Vite plugin

--- a/packages/tsconfig.esm.json
+++ b/packages/tsconfig.esm.json
@@ -1,4 +1,4 @@
 {
   "files": [],
-  "references": [{ "path": "react/tsconfig.json" }]
+  "references": [{ "path": "react/tsconfig.json" }, { "path": "vite-plugin/tsconfig.json" }]
 }
