Upgrades to React 18 and improves ESM support for `@compiled/react/jsx-runtime` and `@compiled/vite-plugin` (#1853)
* Bump dependencies to React 18 and fix jsx runtime exports

* Add ESM support for importing the Vite plugin

--- a/packages/vite-plugin/package.json
+++ b/packages/vite-plugin/package.json
@@ -14,15 +14,14 @@
   "sideEffects": false,
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
-      "require": "./dist/index.js",
-      "default": "./dist/index.js"
+      "types": "./dist/esm/index.d.ts",
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js"
     }
   },
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/esm/index.js",
+  "types": "./dist/esm/index.d.ts",
   "files": [
     "dist",
     "src"
@@ -39,7 +38,7 @@
   "devDependencies": {
     "@compiled/react": "^0.18.0",
     "@types/babel__core": "^7.20.3",
-    "react": "^17.0.2",
+    "react": "^18.3.1",
     "vite": "^5.0.0"
   },
   "peerDependencies": {
